--- a/package.json
+++ b/package.json
@@ -7,17 +7,31 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
-    "nuxt": "^3.16.2",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
     "@pinia/nuxt": "^0.9.0",
-    "pinia": "^2.3.1"
+    "nuxt": "^3.16.2",
+    "pinia": "^2.3.1",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.7.3",
-    "sass": "^1.77.8"
+    "@chromatic-com/storybook": "3",
+    "@nuxtjs/storybook": "8.3.3",
+    "@storybook/addon-essentials": "8.6.12",
+    "@storybook/blocks": "8.6.12",
+    "@storybook/experimental-addon-test": "8.6.12",
+    "@storybook/test": "8.6.12",
+    "@storybook/vue3": "8.6.12",
+    "@vitest/browser": "^3.1.1",
+    "@vitest/coverage-v8": "^3.1.1",
+    "playwright": "^1.52.0",
+    "sass": "^1.77.8",
+    "storybook": "8.6.12",
+    "vitest": "^3.1.1"
   }
 }
