--- a/package.json
+++ b/package.json
@@ -19,11 +19,22 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "3",
+    "@storybook/addon-essentials": "8.6.12",
+    "@storybook/addon-onboarding": "8.6.12",
+    "@storybook/blocks": "8.6.12",
+    "@storybook/experimental-addon-test": "8.6.12",
+    "@storybook/test": "8.6.12",
+    "@storybook/vue3": "8.6.12",
+    "@storybook/vue3-vite": "8.6.12",
+    "@vitejs/plugin-vue": "^5.2.2",
     "@antfu/eslint-config": "^3.7.3",
     "@vitest/browser": "^3.1.1",
     "@vitest/coverage-v8": "^3.1.1",
     "playwright": "^1.52.0",
+    "storybook": "8.6.12",
     "sass": "^1.77.8",
-    "vitest": "^3.1.1"
+    "vitest": "^3.1.1",
+    "vite": "^6.3.1"
   }
 }
