--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.9.0",
+    "@supabase/supabase-js": "^2.49.4",
     "nuxt": "^3.16.2",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^3.7.3",
     "@chromatic-com/storybook": "3",
+    "@nuxtjs/supabase": "^1.5.0",
     "@storybook/addon-essentials": "8.6.12",
     "@storybook/addon-onboarding": "8.6.12",
     "@storybook/blocks": "8.6.12",
@@ -29,13 +32,13 @@
     "@storybook/vue3": "8.6.12",
     "@storybook/vue3-vite": "8.6.12",
     "@vitejs/plugin-vue": "^5.2.2",
-    "@antfu/eslint-config": "^3.7.3",
     "@vitest/browser": "^3.1.1",
     "@vitest/coverage-v8": "^3.1.1",
     "playwright": "^1.52.0",
-    "storybook": "8.6.12",
     "sass": "^1.77.8",
-    "vitest": "^3.1.1",
-    "vite": "^6.3.1"
+    "storybook": "8.6.12",
+    "supabase": "^2.22.6",
+    "vite": "^6.3.1",
+    "vitest": "^3.1.1"
   }
 }
