--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@vitejs/plugin-vue": "^5.2.2",
     "@vitest/browser": "^3.1.1",
     "@vitest/coverage-v8": "^3.1.1",
+    "eslint": "^9.25.1",
     "playwright": "^1.52.0",
     "sass": "^1.77.8",
     "storybook": "8.6.12",
